[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/PersistentCloudNoLig.gd" type="Script" id=1]
[ext_resource path="res://scene/TreeCloud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/TornadoCloud.tscn" type="PackedScene" id=4]

[node name="Cloud" type="Node2D"]
script = ExtResource( 1 )

[node name="TreeCloud" parent="." instance=ExtResource( 3 )]

[node name="TornadoCloud" parent="." instance=ExtResource( 4 )]

[connection signal="switchToLightning" from="TreeCloud" to="." method="_on_TreeCloud_switchToLightning"]
[connection signal="switchToTornado" from="TreeCloud" to="." method="_on_TreeCloud_switchToTornado"]
[connection signal="switchToTree" from="TreeCloud" to="." method="_on_TreeCloud_switchToTree"]
[connection signal="switchToLightning" from="TornadoCloud" to="." method="_on_TornadoCloud_switchToLightning"]
[connection signal="switchToTornado" from="TornadoCloud" to="." method="_on_TornadoCloud_switchToTornado"]
[connection signal="switchToTree" from="TornadoCloud" to="." method="_on_TornadoCloud_switchToTree"]
